--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -22,3 +22,11 @@ jobs:
 
       - name: Render documentation
         run: make
+
+      - uses: actions/upload-artifact@v2
+        with:
+          name: Specification
+          path: |
+            specification.pdf
+            specification.md
+            specification.txt
